--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	text-decoration: none;
+	outline: none;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
@@ -24,5 +26,25 @@
 }
 
 /*=============================================
-            
+            html and body
 ================================================*/
+html {
+	font-size: 62.5%;
+}
+body {
+	font-family: 'Nunito', sans-serif;
+	font-weight: 400;
+}
+
+/*=============================================
+            section-one
+================================================*/
+.section-one {
+	width: 100%;
+	height: 100vh;
+	background-color: #333;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+}
