--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap');
 /* =============================================
             Website Resets
 ================================================ */
@@ -26,7 +26,7 @@
 }
 
 /*=============================================
-            html and body
+            html, body, and utility
 ================================================*/
 html {
 	font-size: 62.5%;
@@ -34,6 +34,16 @@ html {
 body {
 	font-family: 'Nunito', sans-serif;
 	font-weight: 400;
+}
+
+.section-heading {
+	font-size: 12rem;
+	font-weight: 900;
+	color: #fff;
+	text-align: center;
+	text-transform: capitalize;
+	letter-spacing: 0.5rem;
+	text-shadow: 0.3rem 0.3rem 0.3rem #000;
 }
 
 /*=============================================
@@ -47,4 +57,18 @@ body {
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
+}
+
+.section-one-icons i {
+	position: absolute;
+	font-size: 35rem;
+	color: #a79a2d;
+	transform: translate(-50%, -50%) scale(0);
+	text-shadow: 0.2rem 0.2rem 0.2rem #000;
+	transition: transform 0.3s;
+}
+
+.section-one-icons i.change {
+	transform: translate(-50%, -50%) scale(1);
+	transition: transform 0.3s 0.3s;
 }
