--- a/css/styles.css
+++ b/css/styles.css
@@ -278,5 +278,78 @@ body {
 	transition: opacity 1s 1s;
 }
 
+/*=============================================
+            section-four
+================================================*/
+.section-four {
+	position: relative;
+	width: 100%;
+	height: 30vh;
+	display: flex;
+	justify-content: space-around;
+	align-items: flex-start;
+	padding: 3rem 0;
+	background-color: #222;
+}
 
+.section-four-text {
+	text-transform: uppercase;
+}
 
+.section-four-heading {
+	font-size: 4rem;
+	font-weight: 900;
+	color: #a79a2d;
+}
+
+.section-four-paragraph {
+	text-transform: capitalize;
+	font-size: 1.5rem;
+	color: #888;
+}
+
+.signup-form {
+	/* position: relative; */
+	display: flex;
+	align-items: center;
+}
+
+.signup-form-input {
+	width: 35rem;
+	height: 5rem;
+	padding: 1rem;
+	font-size: 1.6rem;
+	font-weight: 700;
+	letter-spacing: 0.1rem;
+	color: #a79a2d;
+	border: 0.2rem solid #a79a2d;
+}
+
+.signup-form-input::placeholder {
+	color: #a79a2d;
+}
+
+.signup-form-btn {
+	position: relative;
+	left: -4.5rem;
+	width: 4rem;
+	height: 4rem;
+	background-color: #333;
+	color: #a79a2d;
+	border: none;
+	font-size: 1.8rem;
+	cursor: pointer;
+}
+
+.copyright {
+	position: absolute;
+	bottom: 3rem;
+	font-size: 1.7rem;
+	font-weight: 200;
+	color: #eee;
+	letter-spacing: 0.1rem;
+	border-top: 0.1rem solid #888;
+	padding-top: 6rem;
+	width: 50%;
+	text-align: center;
+}
