--- a/css/styles.css
+++ b/css/styles.css
@@ -184,6 +184,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	justify-content: space-evenly;
 	padding: 10rem 0;
 	background-color: #222;
 }
@@ -457,13 +458,21 @@ body {
 /*=============================================
 				media queries
 ================================================*/
-@media (max-width: 1400px) {
+@media (max-width: 1530px) {
 	html {
 		font-size: 50%;
 	}
+	.section-one {
+		padding-bottom: 2rem;
+	}
 
-	.section-2 {
-		height: auto;
+	.section-two .section-heading {
+		margin-bottom: 5rem;
+	}
+
+	.section-three .section-heading {
+		margin-top: 5rem;
+		margin-bottom: -6rem;
 	}
 
 	.cards-container {
@@ -480,27 +489,43 @@ body {
 		width: 100%;
 		height: 100%;
 	}
+	.food-description {
+		bottom: 4vw;
+	}
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1400px) {
+	.section-two {
+		height: auto;
+		padding: 10rem 0 12rem 0;
+	}
+
+	.section-four {
+		justify-content: space-evenly;
+		padding-top: 8rem;
+		padding-bottom: 8rem;
+	}
+}
+
+@media (max-width: 1025px) {
 	.section-heading {
 		font-size: 9rem;
 		margin: 0 5rem;
 	}
 
-	.section-1-icons i {
+	.section-one-icons i {
 		font-size: 25rem;
 	}
 
-	.cards-container {
-		flex-wrap: wrap;
+	.section-two .card-container {
+		flex-wrap: wrap !important;
 	}
 
 	.card {
 		margin: 5rem;
 	}
 
-	.section-4 {
+	.section-four {
 		height: 30rem;
 	}
 }
@@ -517,6 +542,15 @@ body {
 	.navbar-link span {
 		font-size: 2rem;
 	}
+	.gallery {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(3, 1fr);
+		grid-gap: 1em;
+	}
+	.food-description {
+		bottom: 7vw;
+	}
 }
 
 @media (max-width: 700px) {
@@ -525,23 +559,37 @@ body {
 		margin: 0 10rem;
 	}
 
-	.section-1-icons i {
+	.section-one-icons i {
 		font-size: 20rem;
 	}
 
 	.menu {
 		left: 2rem;
 	}
+	.gallery {
+		display: flex;
+		flex-direction: column;
+	
+	}
 
-	.section-4 {
+	.section-four {
 		height: 40rem;
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: center;
 	}
 
-	.section-4-text {
-		margin-bottom: 8rem;
+	.section-four-text {
+		margin-bottom: 3rem;
+	}
+	.section-four-heading,
+	.section-four-paragraph {
+		text-align: center;
+	}
+	.copyright {
+		width: 90%;
+		font-size: 1.2rem;
+/* 		border-top: none; */
 	}
 }
 
@@ -552,5 +600,12 @@ body {
 
 	.navbar-link {
 		margin: 0 0.7rem;
+	}
+}
+
+@media (max-width: 325px) {
+	.navbar-link,
+	.navbar-link i {
+		font-size: 2.75rem;
 	}
 }
