--- a/css/styles.css
+++ b/css/styles.css
@@ -569,6 +569,9 @@ body {
 	.gallery {
 		display: flex;
 		flex-direction: column;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
 	
 	}
 
