--- a/css/styles.css
+++ b/css/styles.css
@@ -361,7 +361,7 @@ body {
 
 .food-description {
 	position: absolute;
-	bottom: 5vw;
+	bottom: 7.5em;
 	left: 2rem;
 	width: 70%;
 	font-size: 1.5rem;
@@ -384,6 +384,17 @@ body {
             section-four
 ================================================*/
 .section-four {
+	position: relative;
+	width: 100%;
+	height: 30vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: flex-start;
+	padding: 3rem 0;
+	background-color: #222;
+}
+.section-four-inner {
 	position: relative;
 	width: 100%;
 	height: 30vh;
@@ -441,17 +452,23 @@ body {
 	font-size: 1.8rem;
 	cursor: pointer;
 }
+hr.horizontal-line {
+	min-width: 33%;
+	width: 50%;
+	height: 2px;
+	display: block;
+	align-self: center;
+	margin: 3em auto;
+	text-align: center;
+	color: #888;
+}
 
 .copyright {
-	position: absolute;
-	bottom: 3rem;
+	width: 100%;
 	font-size: 1.7rem;
 	font-weight: 200;
 	color: #eee;
-	letter-spacing: 0.1rem;
-	border-top: 0.1rem solid #888;
-	padding-top: 6rem;
-	width: 50%;
+	letter-spacing: 1px;
 	text-align: center;
 }
 
@@ -490,7 +507,7 @@ body {
 		height: 100%;
 	}
 	.food-description {
-		bottom: 4vw;
+		bottom: 5.5em;
 	}
 }
 
@@ -572,7 +589,6 @@ body {
 		flex-wrap: wrap;
 		justify-content: center;
 		align-items: center;
-	
 	}
 
 	.section-four {
@@ -592,7 +608,6 @@ body {
 	.copyright {
 		width: 90%;
 		font-size: 1.2rem;
-/* 		border-top: none; */
 	}
 }
 
@@ -605,7 +620,17 @@ body {
 		margin: 0 0.7rem;
 	}
 	.food-description {
-		bottom: 12vw;
+		bottom: 5.5em;
+	}
+	.section-four-inner {
+		justify-content: space-evenly;
+		align-items: center;
+	}
+}
+
+@media (max-width: 460px) {
+	.section-four-inner {
+		flex-direction: column;
 	}
 }
 
