--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 *::before {
 	margin: 0;
 	padding: 0;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	text-decoration: none;
 	outline: none;
@@ -56,26 +57,48 @@ body {
 	width: 100%;
 	height: 14rem;
 	background-color: #000;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
+	-webkit-box-shadow: 0.2rem 0.2rem 0.2rem #000;
 	box-shadow: 0.2rem 0.2rem 0.2rem #000;
+	-webkit-transition: top 0.4s;
+	-o-transition: top 0.4s;
 	transition: top 0.4s;
 }
 
 .navbar.change {
 	top: 0;
+	-webkit-transition: top 0.4s 0.2s;
+	-o-transition: top 0.4s 0.2s;
 	transition: top 0.4s 0.2s;
 }
 
 .navbar-link {
 	margin: 0 4rem;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	color: #aaa;
 	opacity: 0;
+	-webkit-transition: color 0.3, opacity, 2s;
+	-o-transition: color 0.3, opacity, 2s;
 	transition: color 0.3, opacity, 2s;
 }
 
@@ -84,22 +107,32 @@ body {
 }
 
 .change .navbar-link:nth-child(1) {
+	-webkit-transition: opacity 0.4s 0.5s, color 0.3s;
+	-o-transition: opacity 0.4s 0.5s, color 0.3s;
 	transition: opacity 0.4s 0.5s, color 0.3s;
 }
 
 .change .navbar-link:nth-child(2) {
+	-webkit-transition: opacity 0.4s 0.6s, color 0.3s;
+	-o-transition: opacity 0.4s 0.6s, color 0.3s;
 	transition: opacity 0.4s 0.6s, color 0.3s;
 }
 
 .change .navbar-link:nth-child(3) {
+	-webkit-transition: opacity 0.4s 0.7s, color 0.3s;
+	-o-transition: opacity 0.4s 0.7s, color 0.3s;
 	transition: opacity 0.4s 0.7s, color 0.3s;
 }
 
 .change .navbar-link:nth-child(4) {
+	-webkit-transition: opacity 0.4s 0.8s, color 0.3s;
+	-o-transition: opacity 0.4s 0.8s, color 0.3s;
 	transition: opacity 0.4s 0.8s, color 0.3s;
 }
 
 .change .navbar-link:nth-child(5) {
+	-webkit-transition: opacity 0.4s 0.9s, color 0.3s;
+	-o-transition: opacity 0.4s 0.9s, color 0.3s;
 	transition: opacity 0.4s 0.9s, color 0.3s;
 }
 
@@ -127,13 +160,18 @@ body {
 	z-index: 100;
 	background-color: #000;
 	border-radius: 30rem 30rem 15rem 15rem;
+	-webkit-box-shadow: 0.1rem 0.1rem 0.1rem #000, -0.1rem -0.1rem 0.1rem #000;
 	box-shadow: 0.1rem 0.1rem 0.1rem #000, -0.1rem -0.1rem 0.1rem #000;
 	cursor: pointer;
+	-webkit-transition: top 0.4s 0.2s;
+	-o-transition: top 0.4s 0.2s;
 	transition: top 0.4s 0.2s;
 }
 
 .menu.change {
 	top: 15rem;
+	-webkit-transition: top 0.4s;
+	-o-transition: top 0.4s;
 	transition: top 0.4s;
 }
 
@@ -145,6 +183,7 @@ body {
 	width: 0.3rem;
 	height: 15rem;
 	background-color: #000;
+	-webkit-box-shadow: 0.1rem 0rem 0.1rem #000;
 	box-shadow: 0.1rem 0rem 0.1rem #000;
 }
 
@@ -155,9 +194,18 @@ body {
 	width: 100%;
 	height: 100vh;
 	background-color: #333;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: space-evenly;
+	-ms-flex-pack: space-evenly;
 	justify-content: space-evenly;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -165,14 +213,26 @@ body {
 	position: absolute;
 	font-size: 35rem;
 	color: #a79a2d;
+	-webkit-transform: translate(-50%, -50%) scale(0);
+	-ms-transform: translate(-50%, -50%) scale(0);
 	transform: translate(-50%, -50%) scale(0);
 	text-shadow: 0.2rem 0.2rem 0.2rem #000;
+	-webkit-transition: -webkit-transform 0.3s;
+	transition: -webkit-transform 0.3s;
+	-o-transition: transform 0.3s;
 	transition: transform 0.3s;
+	transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
 .section-one-icons i.change {
+	-webkit-transform: translate(-50%, -50%) scale(1);
+	-ms-transform: translate(-50%, -50%) scale(1);
 	transform: translate(-50%, -50%) scale(1);
+	-webkit-transition: -webkit-transform 0.3s 0.3s;
+	transition: -webkit-transform 0.3s 0.3s;
+	-o-transition: transform 0.3s 0.3s;
 	transition: transform 0.3s 0.3s;
+	transition: transform 0.3s 0.3s, -webkit-transform 0.3s 0.3s;
 }
 
 /*=============================================
@@ -181,36 +241,70 @@ body {
 .section-two {
 	width: 100%;
 	height: 100vh;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-pack: space-evenly;
+	-ms-flex-pack: space-evenly;
 	justify-content: space-evenly;
 	padding: 10rem 0;
 	background-color: #222;
 }
 
 .card-container {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: row;
 	flex-direction: row;
+	-webkit-box-pack: space-evenly;
+	-ms-flex-pack: space-evenly;
 	justify-content: space-evenly;
 }
 
 .card {
 	position: relative;
 	width: 30rem;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	padding: 4rem;
 	background-color: #a79a2d;
+	-webkit-box-shadow: 1rem 1rem 1rem #000;
 	box-shadow: 1rem 1rem 1rem #000;
+	-webkit-transform: rotateY(20deg) skewX(-2deg);
 	transform: rotateY(20deg) skewX(-2deg);
+	-webkit-transition: -webkit-transform 0.5s, -webkit-box-shadow 0.5s;
+	transition: -webkit-transform 0.5s, -webkit-box-shadow 0.5s;
+	-o-transition: transform 0.5s, box-shadow 0.5s;
 	transition: transform 0.5s, box-shadow 0.5s;
+	transition: transform 0.5s, box-shadow 0.5s, -webkit-transform 0.5s,
+		-webkit-box-shadow 0.5s;
 }
 
 .card:hover {
+	-webkit-transform: rotateY(20deg) skewX(-2deg) translateY(-3rem);
 	transform: rotateY(20deg) skewX(-2deg) translateY(-3rem);
+	-webkit-box-shadow: 2rem 2rem 2rem #000;
 	box-shadow: 2rem 2rem 2rem #000;
 }
 
@@ -222,8 +316,13 @@ body {
 	height: 100%;
 	width: 1rem;
 	background-color: #817824;
+	-webkit-transform: skewY(45deg);
+	-ms-transform: skewY(45deg);
 	transform: skewY(45deg);
+	-webkit-transform-origin: right;
+	-ms-transform-origin: right;
 	transform-origin: right;
+	-webkit-box-shadow: -0.1rem -0.1rem 0.1rem #000;
 	box-shadow: -0.1rem -0.1rem 0.1rem #000;
 }
 
@@ -235,8 +334,13 @@ body {
 	width: 100%;
 	height: 1rem;
 	background-color: #8f8317;
+	-webkit-transform: skewX(45deg);
+	-ms-transform: skewX(45deg);
 	transform: skewX(45deg);
+	-webkit-transform-origin: bottom;
+	-ms-transform-origin: bottom;
 	transform-origin: bottom;
+	-webkit-box-shadow: -0.1rem -0.1rem 0.1rem #000;
 	box-shadow: -0.1rem -0.1rem 0.1rem #000;
 }
 
@@ -266,6 +370,7 @@ body {
 	text-transform: capitalize;
 	border: none;
 	cursor: pointer;
+	-webkit-box-shadow: -0.2rem -0.2rem 0.2rem #000;
 	box-shadow: -0.2rem -0.2rem 0.2rem #000;
 }
 
@@ -279,10 +384,20 @@ body {
 }
 
 .gallery {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: row;
 	flex-direction: row;
+	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
+	-webkit-box-pack: space-evenly;
+	-ms-flex-pack: space-evenly;
 	justify-content: space-evenly;
 	margin-top: 10rem;
 }
@@ -301,6 +416,8 @@ body {
 	height: 0;
 	background-color: #fff;
 	z-index: 10;
+	-webkit-transition: height 0.5s;
+	-o-transition: height 0.5s;
 	transition: height 0.5s;
 }
 
@@ -312,6 +429,8 @@ body {
 	width: 0;
 	height: 0.2rem;
 	background-color: #fff;
+	-webkit-transition: width 0.5s;
+	-o-transition: width 0.5s;
 	transition: width 0.5s;
 }
 
@@ -326,16 +445,27 @@ body {
 .food-img {
 	width: 24vw;
 	height: 15vw;
+	-o-object-fit: cover;
 	object-fit: cover;
+	-webkit-box-shadow: 0.3rem 0.3rem 0.1rem #e92929,
+		0.5rem 0.5rem 0.1rem #a2e946, 0.7rem 0.7rem 0.1rem #297ce9,
+		0.9rem 0.9rem 0.1rem #e92999;
 	box-shadow: 0.3rem 0.3rem 0.1rem #e92929, 0.5rem 0.5rem 0.1rem #a2e946,
 		0.7rem 0.7rem 0.1rem #297ce9, 0.9rem 0.9rem 0.1rem #e92999;
+	-webkit-transition: all 0.5s;
+	-o-transition: all 0.5s;
 	transition: all 0.5s;
 }
 
 .gallery-link:hover .food-img {
+	-webkit-box-shadow: 1rem 1rem 0.1rem #e92929, 2rem 2rem 0.1rem #a2e946,
+		3rem 3rem 0.1rem #297ce9, 4rem 4rem 0.1rem #e92999;
 	box-shadow: 1rem 1rem 0.1rem #e92929, 2rem 2rem 0.1rem #a2e946,
 		3rem 3rem 0.1rem #297ce9, 4rem 4rem 0.1rem #e92999;
+	-webkit-transform: scale(1.1);
+	-ms-transform: scale(1.1);
 	transform: scale(1.1);
+	-webkit-filter: blur(0.5rem);
 	filter: blur(0.5rem);
 	opacity: 0.5;
 }
@@ -351,11 +481,15 @@ body {
 	letter-spacing: 0.1rem;
 	color: #fff;
 	overflow: hidden;
+	-webkit-transition: width 0.3s;
+	-o-transition: width 0.3s;
 	transition: width 0.3s;
 }
 
 .gallery-link:hover .food-name {
 	width: 100%;
+	-webkit-transition: width 1.5s 0.5s;
+	-o-transition: width 1.5s 0.5s;
 	transition: width 1.5s 0.5s;
 }
 
@@ -371,12 +505,16 @@ body {
 	color: #fff;
 	opacity: 0;
 	visibility: hidden;
+	-webkit-transition: opacity 0.3s;
+	-o-transition: opacity 0.3s;
 	transition: opacity 0.3s;
 }
 
 .gallery-link:hover .food-description {
 	opacity: 1;
 	visibility: visible;
+	-webkit-transition: opacity 1s 1s;
+	-o-transition: opacity 1s 1s;
 	transition: opacity 1s 1s;
 }
 
@@ -387,9 +525,18 @@ body {
 	position: relative;
 	width: 100%;
 	height: 30vh;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: space-evenly;
+	-ms-flex-pack: space-evenly;
 	justify-content: space-evenly;
+	-webkit-box-align: start;
+	-ms-flex-align: start;
 	align-items: flex-start;
 	padding: 3rem 0;
 	background-color: #222;
@@ -398,8 +545,13 @@ body {
 	position: relative;
 	width: 100%;
 	height: 30vh;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-ms-flex-pack: distribute;
 	justify-content: space-around;
+	-webkit-box-align: start;
+	-ms-flex-align: start;
 	align-items: flex-start;
 	padding: 3rem 0;
 	background-color: #222;
@@ -422,7 +574,11 @@ body {
 }
 
 .signup-form {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -435,6 +591,22 @@ body {
 	letter-spacing: 0.1rem;
 	color: #a79a2d;
 	border: 0.2rem solid #a79a2d;
+}
+
+.signup-form-input::-webkit-input-placeholder {
+	color: #a79a2d;
+}
+
+.signup-form-input::-moz-placeholder {
+	color: #a79a2d;
+}
+
+.signup-form-input:-ms-input-placeholder {
+	color: #a79a2d;
+}
+
+.signup-form-input::-ms-input-placeholder {
+	color: #a79a2d;
 }
 
 .signup-form-input::placeholder {
@@ -457,6 +629,8 @@ hr.horizontal-line {
 	width: 50%;
 	height: 2px;
 	display: block;
+	-ms-flex-item-align: center;
+	-ms-grid-row-align: center;
 	align-self: center;
 	margin: 3em auto;
 	text-align: center;
@@ -511,6 +685,7 @@ hr.horizontal-line {
 	}
 	.copyright {
 		padding-bottom: 2.75em;
+		margin-bottom: 1em;
 	}
 }
 
@@ -521,6 +696,8 @@ hr.horizontal-line {
 	}
 
 	.section-four {
+		-webkit-box-pack: space-evenly;
+		-ms-flex-pack: space-evenly;
 		justify-content: space-evenly;
 		padding-top: 8rem;
 		padding-bottom: 8rem;
@@ -538,6 +715,7 @@ hr.horizontal-line {
 	}
 
 	.section-two .card-container {
+		-ms-flex-wrap: wrap !important;
 		flex-wrap: wrap !important;
 	}
 
@@ -563,10 +741,37 @@ hr.horizontal-line {
 		font-size: 2rem;
 	}
 	.gallery {
+		display: -ms-grid;
 		display: grid;
+		-ms-grid-columns: 1fr 1em 1fr;
 		grid-template-columns: repeat(2, 1fr);
+		-ms-grid-rows: 1fr 1em 1fr 1em 1fr;
 		grid-template-rows: repeat(3, 1fr);
 		grid-gap: 1em;
+	}
+	.gallery > *:nth-child(1) {
+		-ms-grid-row: 1;
+		-ms-grid-column: 1;
+	}
+	.gallery > *:nth-child(2) {
+		-ms-grid-row: 1;
+		-ms-grid-column: 3;
+	}
+	.gallery > *:nth-child(3) {
+		-ms-grid-row: 3;
+		-ms-grid-column: 1;
+	}
+	.gallery > *:nth-child(4) {
+		-ms-grid-row: 3;
+		-ms-grid-column: 3;
+	}
+	.gallery > *:nth-child(5) {
+		-ms-grid-row: 5;
+		-ms-grid-column: 1;
+	}
+	.gallery > *:nth-child(6) {
+		-ms-grid-row: 5;
+		-ms-grid-column: 3;
 	}
 	.food-description {
 		bottom: 7vw;
@@ -587,17 +792,34 @@ hr.horizontal-line {
 		left: 2rem;
 	}
 	.gallery {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
 		flex-direction: column;
+		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
 		justify-content: center;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 	}
 
 	.section-four {
 		height: 40rem;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
 		flex-direction: column;
+		-webkit-box-pack: start;
+		-ms-flex-pack: start;
 		justify-content: flex-start;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 	}
 
@@ -626,13 +848,20 @@ hr.horizontal-line {
 		bottom: 5.5em;
 	}
 	.section-four-inner {
+		-webkit-box-pack: space-evenly;
+		-ms-flex-pack: space-evenly;
 		justify-content: space-evenly;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 	}
 }
 
 @media (max-width: 460px) {
 	.section-four-inner {
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
 		flex-direction: column;
 	}
 	.copyright {
