--- a/css/styles.css
+++ b/css/styles.css
@@ -493,11 +493,12 @@ body {
 	transition: width 1.5s 0.5s;
 }
 
-.food-description {
+p.food-description {
 	position: absolute;
-	bottom: 7.5em;
+	bottom: 11rem;
 	left: 2rem;
 	width: 70%;
+	display: none;
 	font-size: 1.5rem;
 	font-weight: 300;
 	letter-spacing: 0.1rem;
@@ -680,8 +681,9 @@ hr.horizontal-line {
 		width: 100%;
 		height: 100%;
 	}
-	.food-description {
-		bottom: 5.5em;
+	p.food-description {
+		/* bottom: 8rem; */
+		display: none;
 	}
 	.copyright {
 		padding-bottom: 2.75em;
@@ -747,9 +749,9 @@ hr.horizontal-line {
 		grid-template-columns: repeat(2, 1fr);
 		-ms-grid-rows: 1fr 1em 1fr 1em 1fr;
 		grid-template-rows: repeat(3, 1fr);
-		grid-gap: 1em;
+		/* grid-gap: .25em; */
 	}
-	.gallery > *:nth-child(1) {
+/* 	.gallery > *:nth-child(1) {
 		-ms-grid-row: 1;
 		-ms-grid-column: 1;
 	}
@@ -772,7 +774,7 @@ hr.horizontal-line {
 	.gallery > *:nth-child(6) {
 		-ms-grid-row: 5;
 		-ms-grid-column: 3;
-	}
+	} */
 	.food-description {
 		bottom: 7vw;
 	}
